Detail: Fix horizontal scroll in IE (#402)

--- a/web/war/src/main/webapp/less/detail/properties.less
+++ b/web/war/src/main/webapp/less/detail/properties.less
@@ -49,6 +49,7 @@
   padding: 0;
   
   table {
+    table-layout: fixed;
     margin-bottom: 0;
   }
   
